--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -46,3 +46,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+li {
+    list-style-type:none;
+}
+a {
+    text-decoration: none;
+}
