配置环境书写header

--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face
   font-family: 'sell-icon'
-  src:  url('fonts/sell-icon.eot?n69of7')
-  src:  url('fonts/sell-icon.eot?n69of7#iefix') format('embedded-opentype'),
-    url('fonts/sell-icon.ttf?n69of7') format('truetype'),
-    url('fonts/sell-icon.woff?n69of7') format('woff'),
-    url('fonts/sell-icon.svg?n69of7#sell-icon') format('svg')
+  src:  url('../fonts/sell-icon.eot?n69of7')
+  src:  url('../fonts/sell-icon.eot?n69of7#iefix') format('embedded-opentype'),
+    url('../fonts/sell-icon.ttf?n69of7') format('truetype'),
+    url('../fonts/sell-icon.woff?n69of7') format('woff'),
+    url('../fonts/sell-icon.svg?n69of7#sell-icon') format('svg')
   font-weight: normal
   font-style: normal
 
